; ModuleID = '/home/carl/AnghaBench/libgit2/tests/remote/extr_create.c_test_remote_create__manual.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/remote/extr_create.c_test_remote_create__manual.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@_config = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [20 x i8] c"remote.origin.fetch\00", align 1
@.str.1 = private unnamed_addr constant [36 x i8] c"+refs/heads/*:refs/remotes/origin/*\00", align 1
@.str.2 = private unnamed_addr constant [18 x i8] c"remote.origin.url\00", align 1
@TEST_URL = common dso_local global i8* null, align 8
@_repo = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [7 x i8] c"origin\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_remote_create__manual() #0 {
  %1 = alloca i32*, align 8
  %2 = load i32, i32* @_config, align 4
  %3 = call i32 @git_config_set_string(i32 %2, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.1, i64 0, i64 0))
  %4 = call i32 @cl_git_pass(i32 %3)
  %5 = load i32, i32* @_config, align 4
  %6 = load i8*, i8** @TEST_URL, align 8
  %7 = call i32 @git_config_set_string(i32 %5, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.2, i64 0, i64 0), i8* %6)
  %8 = call i32 @cl_git_pass(i32 %7)
  %9 = load i32, i32* @_repo, align 4
  %10 = call i32 @git_remote_lookup(i32** %1, i32 %9, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.3, i64 0, i64 0))
  %11 = call i32 @cl_git_pass(i32 %10)
  %12 = load i32*, i32** %1, align 8
  %13 = call i32 @git_remote_name(i32* %12)
  %14 = call i32 @cl_assert_equal_s(i32 %13, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.3, i64 0, i64 0))
  %15 = load i32*, i32** %1, align 8
  %16 = call i32 @git_remote_url(i32* %15)
  %17 = load i8*, i8** @TEST_URL, align 8
  %18 = call i32 @cl_assert_equal_s(i32 %16, i8* %17)
  %19 = load i32*, i32** %1, align 8
  %20 = call i32 @git_remote_free(i32* %19)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_config_set_string(i32, i8*, i8*) #1

declare dso_local i32 @git_remote_lookup(i32**, i32, i8*) #1

declare dso_local i32 @cl_assert_equal_s(i32, i8*) #1

declare dso_local i32 @git_remote_name(i32*) #1

declare dso_local i32 @git_remote_url(i32*) #1

declare dso_local i32 @git_remote_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
